    function name is specified both in the paramter "_function" and in the
    parameter "function", then both must be the same. Otherwise the request is
    considered invalid.
    All incoming parameters that do not match the pattern "[a-z][a-z0-9_]*"
    (without the quotes) are considered ignorable and will not be sent down to
    the function.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 1.1.0 ALPHA 7:

* XINS/Java Common Library:
  - Added tests for the ExpiryStrategy class. This revealed a bug which caused
    the slot count to be incorrect if the time-out is not a multiple of the
    precision.
  - Changed the ExpiryStrategy to use weak references to the ExpiryFolder
    instances instead of strong references.
  - Marked class Doorman as deprecated. The ExpiryFolder implementation no
    longer uses a Doorman but uses synchronized sections instead. Effictively,
    this fixes the follwing SF.net bugs:
    . #1089007: Memory leak in Doorman
    . #1089086: Programming error in ExpiryStrategy / Doorman
    . #1089597: Time-outs while calling Doorman.enterAsWriter()
    . #1089600: Time-outs while calling Doorman.enterAsReader()
  - ExpiryFolder now has a constructor that just takes a name and an
    ExpiryStrategy. The old constructor (which accepted a 'strict' flag and a
    maximum queue wait time) has been deprecated.
  - Fixed various Checkstyle-reported issues.
  - Added EMPTY_PROPERTY_READER class field in class PropertyReaderUtils.
  - Changed HTTPCallRequest.getParameters() so it never returns null anymore.
    This helps to avoid NullPointerExceptions.

* XINS/Java Client Framework:
  - Fixed various Checkstyle-reported issues.

* XINS/Java Server Framework:
  - Fixed various Checkstyle-reported issues.
  - Slightly improved the exception handling in class APIServlet.

* Build and release process:
  - Generated Javadoc API docs now link to Servlet 2.4 API docs at